Fixes Chrome related render bug for label overflowing label selectors special thanks to @jackycute

--- a/app/assets/stylesheets/components/_selector.scss
+++ b/app/assets/stylesheets/components/_selector.scss
@@ -119,6 +119,7 @@
     overflow-y: auto;
     .hb-menu-item {
       padding: 6px 12px;
+      transform: translate(0);
 
       .color {
         display: inline-block;
